--- a/foodsLateNightBreweries/LateNight-Breweries.html
+++ b/foodsLateNightBreweries/LateNight-Breweries.html
@@ -45,7 +45,7 @@
         <img src="./urbanArtifactlogo.png" alt="">
     </div>
     <div class="container">
-        <p>March First Brewery & Distillery</p>
+        <p>March First Brewery & Distilling</p>
         <img src="./marchFirstBrewerylogo.png" alt="">
     </div>
 </div>
